# MatAnyone2_ComfyUI

./: .gitignore  README.md  install.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml
web/: matanyone_editor.js  matanyone_editor_v2.js
workflows/: matanyone2_demo.json  matanyone2_extended_demo.json
