[project]
name = "matanyone2-video-matting"
description = "Interactive video matting for ComfyUI with a built-in SAM editor and MatAnyone2 propagation"
version = "1.0.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "huggingface_hub==0.36.2",
    "imageio>=2.25.0",
    "numpy>=1.21",
    "opencv-python-headless>=4.8",
    "Pillow>=9.5",
    "tqdm>=4.66.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dreamrec/MatAnyone2_ComfyUI"
Repository = "https://github.com/dreamrec/MatAnyone2_ComfyUI"
Documentation = "https://github.com/dreamrec/MatAnyone2_ComfyUI#readme"
"Bug Tracker" = "https://github.com/dreamrec/MatAnyone2_ComfyUI/issues"

[tool.comfy]
PublisherId = "dreamrec"
DisplayName = "MatAnyone2 Video Matting"
Banner = "https://raw.githubusercontent.com/dreamrec/MatAnyone2_ComfyUI/main/assets/registry-banner-20260315b.svg"
